K8S_Task 2/order.yml

#  Order Service
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: hashicorp/http-echo
          args:
            - "-listen=:8081"
            - "-text=Order Service Connected to DB & Product"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
